IronGallery/iron-db-service.yaml
# Service: 'iron-db-service' has 'one' endpoint for pods in deployment 'iron-db'?
# targetPort: 3306
# Service Port: '3306'


apiVersion: v1
kind: Service
metadata: 
  name: iron-db-service
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    db: mariadb
