IronGallery/iron-gallery-service.yaml
# Service: 'iron-gallery-service' has 'one' endpoint for pods in deployment 'iron-gallery'?
# targetPort: 80
# port: 80

apiVersion: v1
kind: Service
metadata: 
  name: iron-gallery-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30099
  selector:
    run: iron-gallery
