IronGallery/gallery-of-braavos.yaml
# Ingress resource configured correctly and application accessible at 'http://iron-gallery-braavos.com:30099/'
# Ingress Resource, name: 'iron-gallery-ingress'
# host: iron-gallery-braavos.com
# http parth: '/'
# http backend serviceName: 'iron-gallery-service'
# Name: ingress-spacehttp backend servicePort: '80'

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iron-gallery-ingress
spec:
  rules:
  - host: iron-gallery-braavos.com
    http:
      paths:
      - path: /
        backend:
          serviceName: iron-gallery-service
          servicePort: 80
