IronGallery/netpol-iron-gallery.yaml
# NetworkPolicy, name: 'iron-gallery-firewall'
# Ingress Rule - from Pod labeled: 'run=iron-gallery'
# Applied to Pod with label: 'db=mariadb'
# Applied to allow access to port : '3306'

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iron-gallery-firewall
spec:
  podSelector:
    matchLabels:
      db: mariadb      
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: iron-gallery            
      ports:
        - protocol: TCP
          port: 3306
